# kimi-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy-do.sh  deploy-vuln.sh  requirements-dev.txt  setup-repo.sh  test-integration.sh  test-integration.yaml
.github/workflows/: ci.yml
demo/: README.md  demo.py  report_template.md  run_demo.sh
docker/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  start.sh
docker/config/grafana/dashboards/: kimi-overview.json
docker/config/grafana/datasources/: prometheus.yml
docker/config/postgres/init/: 01-init.sql
docker/config/prometheus/: prometheus.yml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/services/convergence-loop/: Dockerfile  requirements.txt
docker/services/convergence-loop/src/: main.py
docker/services/dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
docker/services/security-auditor/: Dockerfile  requirements.txt
docker/services/security-auditor/src/: main.py
docker/services/sysadmin-ai/: Dockerfile  requirements.txt
docker/services/sysadmin-ai/src/: main.py
docs/: INDEX.md  README.md
docs/api/: convergence-loop.md  dashboard.md  security-auditor.md  sysadmin-ai.md
docs/architecture/: interactions.md  overview.md
docs/examples/: cicd-integration.md  custom-plugins.md  python-integration.md
docs/guides/: convergence-config.md  installation.md  quickstart.md  safety.md  security-testing.md  troubleshooting.md
kimi-convergence-loop/: README.md  convergence.yaml  pyproject.toml
kimi-convergence-loop/src/kimi_convergence_loop/: __init__.py  cli.py  config.py  event_bus.py  pipeline.py  state_machine.py  websocket_server.py
kimi-convergence-loop/src/kimi_convergence_loop/steps/: __init__.py
kimi-convergence-loop/tests/: __init__.py  test_convergence.py
kimi-dashboard/: EXEC_DASHBOARD.md  INTEGRATION.md  README.md  pyproject.toml
kimi-dashboard/src/kimi_dashboard/: __init__.py  bridge.py  cli.py  database.py  server.py
kimi-dashboard/src/kimi_dashboard/static/: index.html
kimi-security-auditor/: ENHANCEMENTS.md  README.md  pyproject.toml
kimi-security-auditor/src/kimi_security_auditor/: __init__.py  cli.py  models.py  recon.py  reporting.py
kimi-security-auditor/src/kimi_security_auditor/attacks/: __init__.py  command_injection.py  cors.py  directory_traversal.py  file_upload.py  jwt_scanner.py  nosql_injection.py  security_headers.py  sql_injection.py  ssti.py  xxe.py
kimi-security-auditor/tests/: test_cors.py  test_directory_traversal.py  test_file_upload.py  test_nosql_injection.py  test_security_headers.py  test_ssti.py  test_xxe.py
kimi-sysadmin-ai/: README.md  SPEC.md  pyproject.toml
kimi-sysadmin-ai/src/kimi_sysadmin_ai/: __init__.py  cli.py  llm_client.py  policy_engine.py  safety.py
kimi-sysadmin-ai/src/kimi_sysadmin_ai/executors/: base.py  docker.py  host.py  kubernetes.py
kimi-sysadmin-ai/src/kimi_sysadmin_ai/policies/: default.rego
kimi-sysadmin-ai/tests/: test_safety.py
security/: .env.example  Dockerfile.convergence-loop  Dockerfile.dashboard  Dockerfile.security-auditor  Dockerfile.sysadmin-ai  IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  requirements.txt  setup.sh
security/certs/: ca.crt  ca.key  dhparam.pem
security/certs/clients/: dashboard-client.crt  dashboard-client.key
security/certs/convergence-loop/: tls.crt  tls.key
security/certs/dashboard/: tls.crt  tls.key
security/certs/security-auditor/: tls.crt  tls.key
security/certs/sysadmin-ai/: tls.crt  tls.key
security/kimi-convergence-loop/config/: convergence-loop.yaml
security/kimi-convergence-loop/src/: main.py
security/kimi-dashboard/config/: dashboard.yaml
security/kimi-dashboard/src/: main.py
security/kimi-security-auditor/config/: security-auditor.yaml
security/kimi-security-auditor/src/: main.py
security/kimi-sysadmin-ai/config/: sysadmin-ai.yaml
security/kimi-sysadmin-ai/src/: main.py
security/shared/: auth.py  generate_api_key.py  generate_certs.py  security.yaml
security/tests/: test_integration.py  test_security.py
test-target/: .env.example  Dockerfile  README.md  app.py
test-target/templates/: comments.html  dashboard.html  document.html  documents.html  index.html  login.html  ping.html  profile.html  search.html  upload.html  users.html  xml.html
vscode-extension/: .eslintrc.js  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/src/providers/: codeLensProvider.ts  configurationProvider.ts  convergenceProvider.ts  securityDiagnosticsProvider.ts
vscode-extension/src/utils/: kimiRunner.ts  logger.ts
