[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-dashboard"
version = "0.1.0"
description = "Real-time web dashboard for Kimi Convergence Loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kimi Ecosystem"}
]
keywords = ["dashboard", "convergence", "websocket", "real-time", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
kimi-dashboard = "kimi_dashboard.cli:main"

[project.urls]
Homepage = "https://github.com/kimi-ecosystem/kimi-dashboard"
Repository = "https://github.com/kimi-ecosystem/kimi-dashboard"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
