[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-sysadmin-ai"
version = "0.1.0"
description = "A secure sysadmin AI assistant with comprehensive safety controls"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kimi Ecosystem"}
]
keywords = ["ai", "sysadmin", "safety", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "docker>=6.0.0",
    "kubernetes>=28.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
opa = [
    "opa-python-client>=1.0.0",
]

[project.scripts]
kimi-admin = "kimi_sysadmin_ai.cli:main"

[project.urls]
Homepage = "https://github.com/kimi-ecosystem/kimi-sysadmin-ai"
Repository = "https://github.com/kimi-ecosystem/kimi-sysadmin-ai"
Issues = "https://github.com/kimi-ecosystem/kimi-sysadmin-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_sysadmin_ai"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = []
